--- a/src/app/modules/menu-layout/components/clients/clients.component.html
+++ b/src/app/modules/menu-layout/components/clients/clients.component.html
@@ -11,7 +11,7 @@
 
   </div>
   <div nz-col> 
-    <app-submit-provider-modal (DataUpdated)="updateTable($event)"></app-submit-provider-modal>
+    <app-submit-client-modal (DataUpdated)="updateTable($event)"></app-submit-client-modal>
   </div>
 </div>
 <br>
