--- a/src/app/modules/menu-layout/components/contracts/contracts.component.html
+++ b/src/app/modules/menu-layout/components/contracts/contracts.component.html
@@ -1,4 +1,5 @@
 <h1>Contratos</h1>
+<br>
 <div nz-row class="row-1">
 
   <div nz-col nzSpan="4">
@@ -16,6 +17,8 @@
     </div>
 
 </div>
+
+<br>
 
 <div nz-row class="row-2">
   <div nz-col>
@@ -58,8 +61,7 @@
 
               </div>
               </td>
-            <td>{{data.id}}</td>
-            <td>{{data.codigo}}</td>  
+            <td nzLeft>{{data.codigo}}</td>  
             <td>{{data.descripcion}}</td>
             <td>{{ data.nombre }}</td>
             <td>{{ data.fechaCreacion   | date:'dd/M/yyyy'  }}</td>  
