--- a/src/app/modules/menu-layout/components/contracts/modal-medidores/modal-medidores.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-medidores/modal-medidores.component.html
@@ -233,7 +233,7 @@
                     
                   <div nzOffset="1" nzSpan="15" nz-col>
                     <div nz-row>
-                      <div nz-col nzSpan="16">
+                      <!-- <div nz-col nzSpan="16">
                         <label>Cargos por servicios comunitarios</label>
                       </div>
                     </div>
@@ -246,13 +246,13 @@
                           <nz-form-item  nzFlex>
                             <nz-form-control>
                               <nz-radio-group >
-                                <label nz-radio [nzValue]="o.value" *ngFor="let o of options">{{ o.label }}</label>
+                                <label nz-radio [nzValue]="o2.value" *ngFor="let o2 of options2">{{ o2.label }}</label>
                               </nz-radio-group>
                             </nz-form-control>
                           </nz-form-item>
                         </div>
   
-                      </div>
+                      </div> -->
                       <div nzOffset="3" nz-col>
   
                         <label>Procentaje de cargo</label>
