--- a/src/app/modules/menu-layout/components/rates/modal-new-rate/modal-new-rate.component.html
+++ b/src/app/modules/menu-layout/components/rates/modal-new-rate/modal-new-rate.component.html
@@ -27,8 +27,9 @@
             <div nz-row >
             <nz-input-group>
                 <nz-select  formControlName="tipo" class="inputMedium">
-                <nz-option nzLabel="x1" nzValue=true></nz-option>
-                <nz-option nzLabel="x2" nzValue=false></nz-option>
+                <nz-option nzLabel="Baja tension" nzValue=true></nz-option>
+                <nz-option nzLabel="Media tension" nzValue=true></nz-option>
+                <nz-option nzLabel="Alta tension" nzValue=false></nz-option>
                 </nz-select>                   
             </nz-input-group>
             </div>
