--- a/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
+++ b/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
@@ -28,16 +28,13 @@
           <tr *ngFor="let data of listOfData">
             <td nzLeft nzAlign="center">
               <button nz-button nzSize="small" nzDanger nzType="primary" (click)="CancelarFactura(data)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
-              
-
             </td>
-            <td>{{data.detalleFacturaId}}</td>
             <td>{{data.codigo}}</td>
             <td>{{ data.codigoContrato }}</td>
             <td>{{data.actorNombre}}</td>
-            <td>{{data.fechaLectura}}</td>
+            <td>{{data.fechaLectura  | date:'dd/M/yyyy'  }}</td>
             <td>{{ data.energiaConsumida }}</td>
-            <td>{{data.total + "  LPS"}}</td>
+            <td style="color: red;">{{data.total + "  LPS"}}</td>
             <td nzRight nzAlign="center">
               <button nz-button nzSize="small" nzType="primary" (click)="GenerateInvoice(data)"><i nz-icon nzType="file-done"></i></button>
 
