--- a/src/app/modules/menu-layout/components/zones/submit-zone-modal/submit-zone-modal.component.html
+++ b/src/app/modules/menu-layout/components/zones/submit-zone-modal/submit-zone-modal.component.html
@@ -1,10 +1,10 @@
 
-      <div nz-col nzOffset="1" nzSpan="4" class="row1-col1">
+      <div nz-col nzSpan="4" class="row1-col1">
         <div *ngIf="dataPosition; else guardar">
           <button nz-button nzSize="small"  nzType="primary" (click)="showModal()"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
         </div>
         <ng-template #guardar>
-          <button nz-button  [nzType]="'primary'" (click)="showModal()"><span>Agregar Medidor Fisico</span></button>
+          <button nz-button  [nzType]="'primary'" (click)="showModal()"><span>Agregar Zona</span></button>
         </ng-template>
     
 
