--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -114,7 +114,7 @@
         </li>
 
           
-        <div routerLink="report" nz-menu-item nzMatchRouter>
+        <div nz-menu-item nzMatchRouter>
           <li>
               <i nz-icon nzType="pie-chart"></i>
               <span >Reportes</span>
