--- a/src/app/modules/menu-layout/components/contracts/contracts.component.html
+++ b/src/app/modules/menu-layout/components/contracts/contracts.component.html
@@ -39,6 +39,7 @@
               {{ column.name }}
             </th>
             <th nzRight nzWidth="55px" nzAlign="center">Medidor</th>
+            <th nzRight nzWidth="55px" nzAlign="center">Factura de EEH</th>
           </tr>
         </thead>
         <tbody>
@@ -67,7 +68,7 @@
             <td>{{ data.fechaCreacion   | date:'dd/M/yyyy'  }}</td>  
             <td>{{ data.fechaVenc   | date:'dd/M/yyyy'  }}</td> 
             <td nzRight nzAlign="center">
-                <app-modal-medidores></app-modal-medidores>
+                <app-modal-medidores [dataPosition]="data" [listOfZones]="listOfZones" [listOfRates] = "listOfRates" [listOfMeters]="listOfMeters"></app-modal-medidores>
               </td>
           </tr>
         </tbody>
