--- a/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
@@ -5,14 +5,14 @@
 <ng-template #Guardar>
     <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Registro</span></button>
 </ng-template>
-<nz-modal [(nzVisible)]="isVisible" nzTitle="Contrato" (nzOnCancel)="handleCancel()" (nzOnOk)="submitForm()">
+<nz-modal [(nzVisible)]="isVisible" nzTitle="Contrato" (nzOnCancel)="handleCancel()" (nzOnOk)="submitForm()" [nzStyle]="{ top: '5px' }">
     <ng-container *nzModalContent>
 
     <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
 
         <div nz-row>
 
-            <div nz-col>
+            <div nz-col nzSpan="11">
 
                 <label>Codigo</label>
                 <div nz-row>
@@ -25,16 +25,16 @@
 
             </div>
 
-            <div nz-col nzOffset="1">
+            <div nz-col nzOffset="2" nzSpan="11">
 
                 <label>Clasificacion</label>
                 <div nz-row>
                     <nz-form-item>
                     <nz-form-control>
-                        <nz-select formControlName="clasificacion" class="inputMedium">
-                            <nz-option nzLabel="Permanente" nzValue="P"></nz-option>
-                            <nz-option nzLabel="Temporal" nzValue="C"></nz-option>
-                            <nz-option nzLabel="Anual" nzValue="I"></nz-option>
+                        <nz-select formControlName="clasificacion" class="inputMedium" (ngModelChange)="filterActores($event)">
+                            <nz-option nzLabel="Proveedor" nzValue="P"></nz-option>
+                            <nz-option nzLabel="Cliente" nzValue="C"></nz-option>
+                            <nz-option nzLabel="Servicios comunitarios" nzValue="I"></nz-option>
                         </nz-select>                   
                     </nz-form-control>
                     </nz-form-item>
@@ -45,6 +45,20 @@
         </div>
 
         <div nz-row>
+            <div nz-col nzSpan="24">
+                <label>Rango de fecha</label>
+                <div nz-row>
+                        <nz-range-picker style="width: 475px;" formControlName="fecha" [nzRanges]="ranges"></nz-range-picker>
+                </div>
+    
+            </div>
+            <br>
+        </div>
+        <br>
+
+        <div nz-row>
+            
+
             <div nz-col>
 
                 <label>Dueño del contrato</label>
@@ -52,7 +66,7 @@
                     <nz-form-item>
                     <nz-form-control>
                         <nz-select formControlName="actorId" class="inputLarge">
-                            <div *ngFor="let client of ListOfClients">
+                            <div *ngFor="let client of ListOfClientsAux">
                                 <nz-option [nzLabel]=client.nombre [nzValue]=client.id></nz-option>
                             </div>
                         </nz-select>                   
@@ -65,73 +79,35 @@
         </div>
 
         <div nz-row>
-            <div nz-row>
-                <div nz-col nzSpan="24">
-                    <label>Fechas</label>
-                </div>
+            <div nz-col nzSpan="11">
+                <label>Dia de generacion factura</label>
+                <br>
+                    <nz-form-item nzFlex>
+                    <nz-form-control>
+                        <nz-select formControlName="diaGeneracion" class="inputMedium">
+                            <nz-option nzLabel="Lunes" [nzValue]=1></nz-option>
+                            <nz-option nzLabel="Martes" [nzValue]=2></nz-option>
+                            <nz-option nzLabel="Miercoles" [nzValue]=3></nz-option>
+                            <nz-option nzLabel="Jueves" [nzValue]=4></nz-option>
+                            <nz-option nzLabel="Viernes" [nzValue]=5></nz-option>
+                            <nz-option nzLabel="Sabado" [nzValue]=6></nz-option>
+                            <nz-option nzLabel="Domingo" [nzValue]=7></nz-option>
+                        </nz-select>                   
+                    </nz-form-control>
+                    </nz-form-item>
+
             </div>
-            <div nz-row>
-                <div nz-row>
-                    <div nz-col>
-                        <nz-form-item>
-                            <nz-form-control>
-                                <label>Fecha Inicial</label>
-                                <div nz-row>
-                                    <nz-form-item>
-                                    <nz-form-control>
-                                        <nz-date-picker formControlName="fechaCreacion" class="inputMedium"></nz-date-picker>
-                                    </nz-form-control>
-                                    </nz-form-item>
-                                </div>
-                                
-                            </nz-form-control>
-                        </nz-form-item>
+            <div nz-col nzOffset="2" nzSpan="11">
+                <label>Dias disponibles para pago</label>
+                <br>
+                    <nz-form-item  nzFlex>
+                        <nz-form-control>
+                        <nz-input-number formControlName="diasDisponibles" class="inputMedium" [nzMin]="1"  [nzStep]="1"></nz-input-number>
+                        </nz-form-control>
+                    </nz-form-item>
+                    
 
-                    </div>
-                    <div nz-col>
-                        <label>Fecha Final</label>
-                        <div nz-row>
-                            <nz-form-item >
-                            <nz-form-control>
-                                <nz-date-picker formControlName="fechaVencimiento" class="inputMedium"></nz-date-picker>
-                            </nz-form-control>
-                            </nz-form-item>
-                        </div>
-                        
-                    </div>
-                </div>
-                <div nz-row>
-                    <div nz-col>
-                        <label>Dia de generacion factura</label>
-                        <br>
-                            <nz-form-item nzFlex>
-                            <nz-form-control>
-                                <nz-select formControlName="diaGeneracion" class="inputMedium">
-                                    <nz-option nzLabel="Lunes" [nzValue]=1></nz-option>
-                                    <nz-option nzLabel="Martes" [nzValue]=2></nz-option>
-                                    <nz-option nzLabel="Miercoles" [nzValue]=3></nz-option>
-                                    <nz-option nzLabel="Jueves" [nzValue]=4></nz-option>
-                                    <nz-option nzLabel="Viernes" [nzValue]=5></nz-option>
-                                    <nz-option nzLabel="Sabado" [nzValue]=6></nz-option>
-                                    <nz-option nzLabel="Domingo" [nzValue]=7></nz-option>
-                                </nz-select>                   
-                            </nz-form-control>
-                            </nz-form-item>
-
-                    </div>
-                    <div nz-col>
-                        <label>Dias disponibles para pago</label>
-                        <br>
-                            <nz-form-item  nzFlex>
-                              <nz-form-control>
-                                <nz-input-number formControlName="diasDisponibles" class="inputMedium" [nzMin]="1"  [nzStep]="1"></nz-input-number>
-                              </nz-form-control>
-                            </nz-form-item>
-                            
-    
-                        
-                    </div>
-                </div>
+                
             </div>
 
         </div>
